@@ -80,7 +80,7 @@ with my early design ideas</li>
 <li>Thanks to those sending in patches and fixes:
     Niki Spahiev, Gordon Tyler, Nathaniel Pryce, 
     Dave Wallace, John Popplewell, Michael Urman,
-    Andrew Straw, Michael Hudson</li>
+    Andrew Straw, Michael Hudson, Ole Martin Bjoerndalen</li>
 <li>And our bug hunters above and beyond:
     Angus, Guillaume Proux, Frank Raiser,
     Austin Henry, Kaweh Kazemi, Arturo Aldama,
